8269865: Async UL needs to handle ERANGE on exceeding SEM_VALUE_MAX